# Context-Compressed-DFlash

./: .gitignore  BUILD_VALIDATION.txt  MANUAL_RUN_REC_T06A3.md  README.md  REC_T06A3_SOURCE_MANIFEST.md  config.yml  instruction.md  pyproject.toml  pyrightconfig.json  requirements.txt  rules.md  setup.sh
backup/20260523-140439/project/: LICENSE  README.md  pyproject.toml
backup/20260523-140439/project/docs/: presentation_1.html
backup/20260523-140439/project/docs/superpowers/plans/: 2026-05-23-backup-and-project-restart.md
backup/20260523-140439/project/src/benchmarks/: fixtures.py  low_tier.py  rows.py
backup/20260523-140439/project/src/cli/: generate.py  run_logging.py
backup/20260523-140439/project/src/htfsd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backup/20260523-140439/project/src/low_tier/: drafter.py  verifier.py
backup/20260523-140439/project/src/metrics/: timers.py
backup/20260523-140439/project/src/runtime/: __init__.py
backup/20260523-140439/project/tests/: test_acceptance_policy.py  test_dflash_parser.py  test_low_tier_engine.py  test_run_logging.py  test_tokenization.py
configs/: local.example.yaml  local.yaml  reconstruction.yml
data/: README.md
docs/: CC-DFlash-Overview.html  DEMO-LIVE-STREAMING.md  Roadmap.html
docs/artifacts/review-pack-windows-auto-sdpa-parity-fix-smoke-n10/production-source/scripts/windows_triton_compat/: README.md  pyproject.toml
frontend/: debug.js  index.html  inspect.js  package-lock.json  package.json  pnpm-lock.yaml  screenshot.js
models/: README.md
notebooks/: 01_fetch_and_process_datasets.ipynb  02_run_three_version_benchmark.ipynb  03_compare_benchmark_charts.ipynb  README.md  notebook_setup.py  utils.py
results/: dflash_r1_n20.jsonl  dflash_r1_smoke.jsonl  llmlingua_ar_r2_smoke.jsonl  llmlingua_ar_r3_smoke.jsonl  task24_cc_llm_r2_n10.jsonl  task24_dflash_r1_n10.jsonl  task29_cc_llm_r2_longctx_n6.jsonl  task29_llmlingua_ar_r3_longctx_n6.jsonl  task31_cc_llm_r2_longctx_text_n6.jsonl  task31_dflash_r1_longctx_text_n6.jsonl  task31_llmlingua_ar_r2_longctx_text_n6.jsonl  task31_llmlingua_ar_r3_longctx_text_n6.jsonl  task32_answer_quality_summary.json  task40_breakeven_curve_v1_summary.json  task43_5_answer_quality_summary.json  task43_llmlingua_ar_r2_sample_n5.jsonl  task45_compression_fix_v2_cc_llm_r2_n3.jsonl  task45_final_artifact_audit_summary.json  task45_final_baseline_ar_n100.jsonl  task45_final_cc_llm_r2_n100.jsonl  task45_final_dflash_r1_n100.jsonl  task45_runner_fix_cc_llm_r2_n3.jsonl  task45_runner_fix_dflash_r1_n1.jsonl  task45_runner_fix_llmlingua_ar_r2_n3.jsonl  task45_source_mode_dataset_audit_summary.json  task46_pareto_table.csv  task47_quality_failure_samples.jsonl  task47_quality_refinement_summary.json  task47_quality_table.csv  task50_gsm8k_short_dflash_r1_n3.jsonl  task50_qmsum_long_llmlingua_ar_r2_n3.jsonl  task51_gsm8k_short_cc_dflash_r2_n10.jsonl  task51_gsm8k_short_llmlingua_ar_r2_n10.jsonl  task51_qmsum_long_baseline_ar_n10.jsonl  task51_qmsum_long_cc_dflash_r2_n10.jsonl  task51_qmsum_long_cc_dflash_r2_n3.jsonl  task51_qmsum_long_dflash_r1_n10.jsonl  task51_qmsum_long_llmlingua_ar_r2_n10.jsonl  task52_metric_summary.json  task53_gsm8k_quality_calibration_summary.json  (+95 more)
scratch/: git_info.txt  inspect_output.txt  phase316_cuda_results.json  phase316_cuda_results_v2.json  phase316_device_split_results.json  phase316_gemma_results.json  phase316_kv_results.json  run_all_verifications.py
scripts/: ablate_compressed_block_sizes.py  analyze_task24_matrix.py  analyze_task31_answer_quality.py  analyze_task46_pareto.py  analyze_task47_quality_refinement.py  analyze_task53_gsm8k_quality.py  analyze_task56_gsm8k_final_answer_calibration.py  analyze_task57_compressed_preview_triage.py  analyze_task59_suffix_verification.py  analyze_task60_mnt256_calibration.py  analyze_task61b_keep_rate67_calibration.py  analyze_task62_changed_outcome_triage.py  analyze_task63_n30_stability.py  analyze_task66_mnt384_rerun_reproducibility.py  analyze_task70_qmsum_diagnostic_audit.py  analyze_task71_qmsum_n30_full_matrix.py  analyze_task72_qmsum_cap_hit_proxy_triage.py  analyze_task74_qmsum_proxy_case_triage.py  analyze_task75_qmsum_balanced_policy.py  analyze_task76_qmsum_evidence_error_taxonomy.py  analyze_task77_qmsum_evidence_policy.py  analyze_task78_qmsum_evidence_retention.py  analyze_task80_cross_dataset_final_package.py  analyze_task80a_final_two_dataset_rerun.py  analyze_task83_repair.py  analyze_task84_qmsum_quality_proxy.py  analyze_task86_rerun_gate.py  analyze_task87_n10_gate.py  analyze_task88_n30_rerun.py  audit_dataset.py  audit_smoke_artifacts.py  audit_task45_final_artifacts.py  build_dataset_smoke_review_pack.py  build_quality_repair_targeted.py  build_stage3_datasets.py  check_env.py  check_roadmap_rows.py  check_task29_answers.py  classify_low_tier_trace.py  compare_trace_report.py  (+46 more)
src/: config.py  htfsd_types.py  main.py
tests/: build_compressor_dataset_review_pack.py  build_environment_package_refactor_review_pack.py  build_rec3_dflash_block_size_ablation_review_pack.py  build_rec3_dflash_verifier_review_pack.py  build_rec3_four_condition_review_pack.py  build_windows_auto_sdpa_parity_diagnostics.py  build_windows_auto_sdpa_parity_review_pack.py  build_windows_environment_benchmark_review_pack.py  build_windows_failure_diagnostics.py  conftest.py  create_example_dataset.py  legacy_preprocess_adapter.py  run_256token_audit.py  run_compressor_validation.py  run_dataset_smoke_compression_preflight.py  run_dataset_smoke_generation_preflight.py  run_parity_probe.py  (+190 more)
(+2573 files in other folders)
