[project]
name = "ccdf"
version = "0.1.0"
description = "Context-Compressed Decoding Flash reconstruction runtime."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[project.scripts]
ccdf = "ccdf.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
