[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccdf"
version = "0.2.0"
description = "Context-Compressed DFlash runtime, benchmark suite, and live streaming demo."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Research and educational use" }
keywords = [
  "dflash",
  "speculative-decoding",
  "prompt-compression",
  "llmlingua",
  "transformers",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "PyYAML>=6.0,<7",
  "torch>=2.9,<3",
  "transformers>=4.57,<4.58",
  "accelerate>=1.2,<2",
  "safetensors>=0.4,<1",
  "huggingface-hub>=0.30,<1",
  "llmlingua>=0.2.2",
]

[project.optional-dependencies]
# Required for loading the Qwen3-4B-AWQ target model.
awq = [
  "autoawq>=0.2.9,<0.3",
]

# Live FastAPI + SSE demo. Install with:
#   python -m pip install -e ".[demo]"
demo = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
]

# Dataset preparation utilities when the source datasets must be rebuilt.
data = [
  "datasets>=3.2,<5",
]

profile = [
  "psutil>=6,<8",
]

dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.25,<1",
  "httpx>=0.28,<1",
  "ruff>=0.9,<1",
  "black>=24,<26",
]

[project.urls]
Repository = "https://github.com/onsra520/Context-Compressed-DFlash"
Documentation = "https://github.com/onsra520/Context-Compressed-DFlash/tree/main/docs"

[project.scripts]
ccdf-benchmark = "ccdf.benchmark.four_condition.cli:main"
ccdf-demo-api = "ccdf.api.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ccdf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests", "scripts"]
extend-exclude = [
  "src/ccdf/frontend",
  ".worktrees",
  "archives",
  "archive",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ccdf"]

[tool.black]
line-length = 110
target-version = ["py312"]
extend-exclude = '''
/(
    src/ccdf/frontend
  | \.worktrees
  | archives?
)/
'''
