[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htfsd"
version = "0.1.0"
description = "HTFSD Phase 0-2 MVP: vLLM-native baseline, D-Flash, and Low Tier verification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.1",
  "vllm>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pylint>=3.3",
  "pyright>=1.1",
]
benchmark = ["datasets>=2.19"]

[project.scripts]
htfsd-generate = "cli.generate:main"
htfsd-benchmark-low = "cli.benchmark_low:main"
htfsd-baseline-e4b = "cli.baseline_e4b:main"

[tool.setuptools]
py-modules = ["config", "htfsd_types"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gpu: requires GPU and local model access",
  "vllm: requires vLLM runtime and model access",
]

[tool.pylint.main]
py-version = "3.11"
jobs = 0

[tool.pylint.messages_control]
disable = []

[tool.pylint.format]
max-line-length = 120
